# simple-calculator

./: .gitmodules  CMakeLists.txt  Framework.h  README.md  SimpleCalculator.cc  simple-calculator.sln  simple-calculator.vcxproj  simple-calculator.vcxproj.filters  simple_calculator.cc
lib/: string-math.lib
src/: consoleapp.cpp  consoleapp.hpp  main.cpp  simplecalculator.cpp  simplecalculator.hpp  winapp.cpp  winapp.hpp
